--- a/src/app/components/instruction/instruction.component.scss
+++ b/src/app/components/instruction/instruction.component.scss
@@ -11,7 +11,7 @@ section {
   height: 100%;
   border-radius: 25%;
   position: relative;
-
+  animation: spin 4s infinite linear;
   .shadow {
     width: 14.8vw;
     height: 28.8vw;
@@ -31,7 +31,14 @@ section {
     z-index: 2;
   }
 }
-
+@keyframes spin {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(2.083vw);
+  }
+}
 .text {
   width: 39.444vw;
 
