--- a/src/app/components/phones/phones.component.scss
+++ b/src/app/components/phones/phones.component.scss
@@ -1,44 +1,86 @@
-section{
+section {
   width: 100%;
-  //height: 53.958vw;
-  display:flex;
-  align-items:center;
+  display: flex;
+  align-items: center;
   flex-direction: column;
-  .images{
+
+  .images {
     width: 39vw;
     height: 38.778vw;
     display: flex;
     z-index: 3;
-    .img-one{
+    animation: spin 4s infinite linear;
+
+    .img-one {
       width: 50%;
       height: 100%;
       transform: translateY(-7.3vw);
-      img{
+      position: relative;
+
+      .shadow {
+        width: 12.8vw;
+        height: 28.8vw;
+        z-index: -1;
+        left: 50%;
+        -moz-box-shadow: 0.069vw 1.597vw 5.903vw 0.972vw rgb(112 112 112 / 39%);
+        box-shadow: 0.069vw 1.597vw 5.903vw 0.972vw rgb(112 112 112 / 39%);
+        transform: translateX(-50%) translateY(-50%);
+        top: 50%;
+        position: absolute;
+      }
+
+      img {
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
     }
-    .img-two{
+
+    .img-two {
       width: 50%;
       height: 100%;
       transform: translateX(-4vw) translateY(-5vw);
       z-index: -1;
-      img{
- width: 100%;
+      position: relative;
+
+      .shadow {
+        width: 11.8vw;
+        height: 28.8vw;
+        z-index: -1;
+        left: 50%;
+        -moz-box-shadow: 0.069vw 1.597vw 5.903vw 0.972vw rgb(112 112 112 / 39%);
+        box-shadow: 0.069vw 1.597vw 5.903vw 0.972vw rgb(112 112 112 / 39%);
+        transform: translateX(-50%) translateY(-50%);
+        top: 50%;
+        position: absolute;
+      }
+
+      img {
+        width: 100%;
         height: 100%;
         object-fit: cover;
       }
     }
   }
 }
-.border{
+
+@keyframes spin {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(2.083vw);
+  }
+}
+
+.border {
   width: 61.389vw;
   background: #E4E4E4;
   height: 0.208vw;
   margin: 6.250vw 0;
 }
-h1{
+
+h1 {
   font-size: 3.056vw;
   text-align: center;
   margin-bottom: 5.486vw;
