--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,23 +1,30 @@
-main{
+main {
   width: 100%;
   height: 36.889vw;
-  //background: brown;
   position: relative;
-  img{
+  @media(max-width: 433px) {
+    height: 152.889vw;
+  }
+
+  img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    @media(max-width: 433px) {
+
+    }
   }
 }
-.text{
+
+.text {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
   text-align: center;
   color: white;
@@ -25,22 +32,44 @@ main{
   height: 100%;
   background: #17101099;
   z-index: 2;
-  h3{
-    font-size: 1.667vw;
+  @media(max-width: 433px) {
+
   }
-  h1{
+
+  h3 {
+    font-size: 1.667vw;
+    @media(max-width: 433px) {
+      font-size: 13.667vw;
+    }
+  }
+
+  h1 {
     font-size: 4.028vw;
     width: 65.208vw;
     margin: 1.181vw 0;
+    @media(max-width: 433px) {
+      font-size: 9.028vw;
+      width: 93.208vw;
+      margin: 7.181vw 0;
+    }
   }
-  p{
-font-size: 1.667vw;
-margin-top: 1.236vw;
-  }
-  .buttons{
-     margin-top: 3.236vw;
 
-    button{
+  p {
+    font-size: 1.667vw;
+    margin-top: 1.236vw;
+    @media(max-width: 433px) {
+      font-size: 6.667vw;
+      margin-top: 7.236vw;
+    }
+  }
+
+  .buttons {
+    margin-top: 3.236vw;
+    @media(max-width: 433px) {
+      margin-top: 12.236vw;
+    }
+
+    button {
       width: 16.528vw;
       height: 4.722vw;
       outline: none;
@@ -49,18 +78,32 @@ margin-top: 1.236vw;
       color: white;
       border-radius: 2.083vw;
       margin: 0 1.250vw;
-      font-size: 1.667vw;transition: 300ms ease-in-out;
-      transition-property:   background, border;
-       border: 1px solid transparent;
-      &:hover{
+      font-size: 1.667vw;
+      transition: 300ms ease-in-out;
+      transition-property: background, border;
+      border: 1px solid transparent;
+      @media(max-width: 433px) {
+        width: 40.528vw;
+        height: 12.722vw;
+        border-radius: 10.083vw;
+        margin: 0 3.25vw;
+        font-size: 5.667vw;
+      }
+
+      &:hover {
         background: transparent;
-      border: 1px solid white;
+        border: 1px solid white;
       }
     }
-    button:nth-child(2){
+
+    button:nth-child(2) {
       background: transparent;
       border: 1px solid white;
-      &:hover{
+      @media(max-width: 433px) {
+
+      }
+
+      &:hover {
         background: #FA4A0C;
         border: 1px solid transparent;
       }
