--- a/src/app/components/phones/phones.component.scss
+++ b/src/app/components/phones/phones.component.scss
@@ -3,6 +3,9 @@ section {
   display: flex;
   align-items: center;
   flex-direction: column;
+  @media(max-width: 433px) {
+
+  }
 
   .images {
     width: 39vw;
@@ -10,12 +13,19 @@ section {
     display: flex;
     z-index: 3;
     animation: spin 4s infinite linear;
+    @media(max-width: 433px) {
+      width: 90vw;
+      height: 97.778vw;
+    }
 
     .img-one {
       width: 50%;
       height: 100%;
       transform: translateY(-7.3vw);
       position: relative;
+      @media(max-width: 433px) {
+        transform: translateY(-23.3vw);
+      }
 
       .shadow {
         width: 12.8vw;
@@ -27,6 +37,10 @@ section {
         transform: translateX(-50%) translateY(-50%);
         top: 50%;
         position: absolute;
+        @media(max-width: 433px) {
+          width: 33.8vw;
+          height: 65.8vw;
+        }
       }
 
       img {
@@ -42,6 +56,9 @@ section {
       transform: translateX(-4vw) translateY(-5vw);
       z-index: -1;
       position: relative;
+      @media(max-width: 433px) {
+        transform: translateX(-6vw) translateY(-17vw);
+      }
 
       .shadow {
         width: 11.8vw;
@@ -53,6 +70,10 @@ section {
         transform: translateX(-50%) translateY(-50%);
         top: 50%;
         position: absolute;
+        @media(max-width: 433px) {
+          width: 29.8vw;
+          height: 72.8vw;
+        }
       }
 
       img {
@@ -78,10 +99,20 @@ section {
   background: #E4E4E4;
   height: 0.208vw;
   margin: 6.250vw 0;
+  @media(max-width: 433px) {
+    width: 99.389vw;
+    height: 1.208vw;
+  }
 }
 
 h1 {
   font-size: 3.056vw;
   text-align: center;
   margin-bottom: 5.486vw;
+  @media(max-width: 433px) {
+    font-size: 12.056vw;
+
+
+    margin-bottom: 11.486vw;
+  }
 }
